	* arch/arm/srcm/stm32/stm32_eth.c:  Adds an Ethernet driver for the STM32 F4.
	* arch/arm/srcm/stm32/stm32_dac.c and stm32_adc.c: "Skeleton" files for STM32
	  DAC and ADC drivers.  The actual logic will come later.
	* arch/arm/srcm/stm32/stm32_eth.c:  There may be a few more lurking bugs, but
	  the STM32 Ethernet driver appears to be fully functional on the STM3240G-EVAL.
	* arch/arm/srcm/stm32/stm32_eth.c:  Fix an error in clearing abnormal interrupt
	  events.
	* configs/stm3240g-eval/dhcpd:  Add a DCHP daemon configuration for the
	  STM3240G-EVAL board.
	* configs/stm3240g-eval/nettest:  Add a network test configuration for the
	  STM3240G-EVAL board.
	* arch/arm/srcm/stm32/stm32_rtc.c, stm32f10xxx_rtc.c, and stm32f40xxx_rtc:
	  Broke out separate drivers to handle the very different RTC implementations
	  in the STM32 F1 and F4 family.
	* arch/arm/srcm/stm32/stm32f10xxx_rtc.c:  STM32 F4 RTC is functional (12/14/2011)
	* net/uip-arp.c: Fix compilation issue with CONFIG_NET_ARP_IPIN
	* include/nuttx/pwm.h and drivers/pwm.c:  Add an interface definition and a
	  "upper half" driver for PWM output.
	* arch/arm/src/stm32/stm32_pwm.c:  Added a PWM "lower half" driver for the
	  STM32.  The initial check-in is little more than a framework for the driver.
	* arch/arm/src/stm32/stm32_usbdev.c:  Corrected two CRITICAL errors in the USB
	  device-side driver:  (1) Handling of data overrun condition was wrong.  When
	  there was no further memory to accept further OUT endpoint data, the driver
	  would hang with infinite interrupts; (2) the logic in setting toggle bits
	  was not correct.  However, this driver has functioned for a long time until
	  the particular condition that revealed the bug occurred.  My impression is
	  that this latter bugfix also fixes some STM32 USB performance problems.
	* configs/hymini-stm32v: A configuration for the HY-Mini STM32v board contributed
	  by Laurent Latil.  Theses changes also include support for the STM32F103VCT6. 

