@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 6, 2011</p>
+      <p>Last Updated: December 19, 2011</p>
     </td>
   </tr>
 </table>
@@ -463,7 +463,7 @@
   <td>
     <p>
       <li>
-        Network, USB (host), USB (device), serial, CAN, ADC, DAC driver architectures.
+        Network, USB (host), USB (device), serial, CAN, ADC, DAC, and PWM driver architectures.
       </li>
     </p>
 </tr>
