@@ -50,4 +50,8 @@ CONFIGURED_APPS += netutils/webclient
 CONFIGURED_APPS += netutils/tftpc
 endif
 
+ifeq ($(CONFIG_PWM),y)
+CONFIGURED_APPS += examples/pwm
+endif
+
 
